--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,17 @@
-body {
-  color: red;
-}
+@import 'vendors/normalize';
+
+@import 'abstracts/variables',
+        'abstracts/mixins';
+
+@import 'base/base',
+        'base/helpers',
+        'base/spacing',
+        'base/typography';
+
+@import 'layout/header',
+        'layout/footer',
+        'layout/container';
+
+@import 'components/button',
+        'components/list',
+        'components/terminal';
