--- a/app/templates/branch-detail.pug
+++ b/app/templates/branch-detail.pug
@@ -5,8 +5,6 @@ block content
     ul.list.list_group
         each commit in commits
             li.list__item
-                a(href='/commit/' + commit)= commit
-                //br
-                //= ' ' + commit.author + ' ' + commit.date
-                //br
-                //= commit.body
+                a(href='/commit/' + commit.hash)= commit.hash
+                div(style="white-space: pre-line")
+                    = commit.info
