--- a/app/templates/file-list.pug
+++ b/app/templates/file-list.pug
@@ -1,8 +1,6 @@
 extends layouts/default.pug
+include ./blocks/file-tree
 
 block content
     h3 Files
-        ul.list.list_group
-            each file in files
-                li.list__item
-                    =file
+    +file-tree(tree)
