--- a/app/templates/branch-list.pug
+++ b/app/templates/branch-list.pug
@@ -5,5 +5,5 @@ block content
     ul.list.list_group
         each branch in branches
             li.list__item
-                a(href='branch/' + branch )= branch
+                a(href='/branch/' + branch )= branch
 
