--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -14,4 +14,5 @@
 
 @import 'components/button',
         'components/list',
-        'components/terminal';
+        'components/terminal',
+        'components/link';
