--- a/app/templates/branch-detail.pug
+++ b/app/templates/branch-detail.pug
@@ -5,6 +5,6 @@ block content
     ul.list.list_group
         each commit in commits
             li.list__item
-                a(href='/commit/' + commit.hash)= commit.hash
+                a(href='/tree/' + commit.hash)= commit.hash
                 div(style="white-space: pre-line")
                     = commit.info
