--- a/app/templates/branch-list.pug
+++ b/app/templates/branch-list.pug
@@ -4,6 +4,7 @@ block content
     h3 Branches
     ul.list.list_group
         each branch in branches
-            li.list__item
+            li.list__item.list__item_flex
                 a(href='/branch/' + branch )= branch
+                a(href='/tree/' + branch ).button.button_no_offset Browse Files
 
