--- a/src/sass/components/_list.scss
+++ b/src/sass/components/_list.scss
@@ -8,6 +8,11 @@
       position: relative;
       border: 1px solid $gray-light;
       padding: 8px 10px;
+      &_flex{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
     }
   }
 
