--- a/app/templates/branch-detail.pug
+++ b/app/templates/branch-detail.pug
@@ -2,9 +2,10 @@ extends layouts/default.pug
 
 block content
     h3 Commits
-    ul.list.list_group
-        each commit in commits
-            li.list__item
-                a(href='/tree/' + commit.hash)= commit.hash
-                div(style="white-space: pre-line")
-                    = commit.info
+    if commits
+        ul.list.list_group
+            each commit in commits
+                li.list__item
+                    a(href='/tree/' + commit.hash)= commit.hash
+                    div(style="white-space: pre-line")
+                        = commit.info
