Добавлены meta в head

--- a/app/templates/includes/head.pug
+++ b/app/templates/includes/head.pug
@@ -1,4 +1,7 @@
 head
     title= 'Test Your Local Git'
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1")
+    meta(name="robots" content="noindex")
     link(rel='stylesheet', href='/main.css')
     block styles
