хлебные крошки для файлов

--- a/app/templates/blob.pug
+++ b/app/templates/blob.pug
@@ -2,5 +2,13 @@ extends layouts/default.pug
 
 block content
     h3 FILE
+    if breadcrumbs
+        p
+            - var deep = ''
+            each crumb in breadcrumbs
+                - deep += '/' + crumb
+                a(href= '/path/' + branch + deep)= crumb + '/'
+    else
+        a(href= '/path/' + branch) /
     pre
         =body
