--- a/app/templates/tree.pug
+++ b/app/templates/tree.pug
@@ -1,7 +1,7 @@
 extends layouts/default.pug
-include ./blocks/file-tree
+include ./blocks/tree
 
 block content
     h3 Files Tree
     pre
-        +file-tree(tree)
+        +tree(tree)
