--- a/app/templates/branch-detail.pug
+++ b/app/templates/branch-detail.pug
@@ -6,7 +6,7 @@ block content
         ul.list.list_group
             each commit in commits
                 li.list__item
-                    a(href='/path/' + branch + '/'+ commit.hash)= commit.hash
+                    a(href='/ls-tree/' + branch + '/'+ commit.hash)= commit.hash
                     p(style="white-space: pre-line")
                         = commit.info
                     a(href='/tree/' + branch + '/' + commit.hash ).button.button_no_offset.button_primary Browse Tree
