--- a/app/templates/branch-list.pug
+++ b/app/templates/branch-list.pug
@@ -8,6 +8,6 @@ block content
                 li.list__item.list__item_flex
                     a(href='/branch/' + branch )= branch
                     div
-                        a(href='/path/' + branch).button.button_no_offset Browse Files
+                        a(href='/ls-tree/' + branch).button.button_no_offset Browse Files
                         a(href='/tree/' + branch + '/' + branch ).button.button_no_offset.button_primary Browse Tree
 
