Подключение и прогон через sass lint

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,20 +3,20 @@ $font-base: "Roboto", Helvetica, Arial, sans-serif;
 $font-color: #222;
 $font-size: 1.6rem;
 
-$global-radius: .2rem;
+$global-radius: 0.2rem;
 $border-color: #bbb;
 
 $gray-light: #d3d3d3;
 $gray: #a8a8a8;
 $gray-dark: #7e7e7e;
 
-$color-link: #496DDB;
-$color-primary: rgba(52, 152, 219,1.0);
+$color-link: #496ddb;
+$color-primary: rgba(52, 152, 219, 1);
 $color-secondary: $gray-dark;
 
-$color-info: #5BC0EB;
-$color-success: #2BC016;
-$color-warning: #E67E22;
-$color-danger: #C3423F;
+$color-info: #5bc0eb;
+$color-success: #2bc016;
+$color-warning: #e67e22;
+$color-danger: #c3423f;
 
 $white: #fff;
