--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,8 +5,8 @@ html {
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -41,14 +41,8 @@ ol {
 ul {
   padding-left: 0;
   margin-top: 0;
-  ul, ol {
-    margin: 1.5rem 0 1.5rem 3rem;
-    font-size: 90%;
-  }
-}
 
-ol {
-  ol, ul {
+  ul {
     margin: 1.5rem 0 1.5rem 3rem;
     font-size: 90%;
   }
@@ -59,40 +53,22 @@ li {
 }
 
 input {
-    appearance: none;
-    background-color: $white;
-    border-radius: $global-radius;
-    border: 1px solid lighten($border-color, 8.8%);
-    box-shadow: none;
-    box-sizing: border-box;
-    height: 38px;
-    padding: 6px 10px; // The 6px vertically centers text on FF, ignored by Webkit
-    -moz-appearance: none;
-    -webkit-appearance: none;
+  appearance: none;
+  background-color: $white;
+  border-radius: $global-radius;
+  border: 1px solid lighten($border-color, 8.8%);
+  box-shadow: none;
+  box-sizing: border-box;
+  height: 38px;
+  padding: 6px 10px; // The 6px vertically centers text on FF, ignored by Webkit
+  -moz-appearance: none;
+  -webkit-appearance: none;
 
-    &:focus {
-      border: 1px solid $color-primary;
-      outline: 0;
-    }
+  &:focus {
+    border: 1px solid $color-primary;
+    outline: 0;
+  }
 }
-
-//textarea{
-//  height: 38px;
-//  padding: 6px 10px;
-//  background-color: $white;
-//  border: 1px solid lighten($border-color, 8.8%);
-//  border-radius: $global-radius;
-//  box-shadow: none;
-//  appearance: none;
-//  min-height: 65px;
-//
-//  &:focus {
-//    border: 1px solid $color-primary;
-//    outline: 0;
-//  }
-//}
-
-
 
 pre {
   overflow: auto;
@@ -103,8 +79,8 @@ code {
   border-radius: $global-radius;
   border: 1px solid $gray-light;
   font-size: 90%;
-  margin: 0 .2rem;
-  padding: .2rem .5rem;
+  margin: 0 0.2rem;
+  padding: 0.2rem 0.5rem;
   white-space: nowrap;
 }
 
