--- a/src/sass/base/_spacing.scss
+++ b/src/sass/base/_spacing.scss
@@ -1,4 +1,5 @@
-button, input {
+button,
+input {
   margin-bottom: 1rem;
 }
 
@@ -15,5 +16,5 @@ li {
 }
 
 label {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
