--- a/server/templates/includes/head.pug
+++ b/server/templates/includes/head.pug
@@ -3,5 +3,5 @@ head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1")
     meta(name="robots" content="noindex")
-    link(rel='stylesheet', href='/main.css')
+    link(rel='stylesheet', href='/styles.css')
     block styles
