--- a/server/templates/blob.pug
+++ b/server/templates/blob.pug
@@ -10,6 +10,6 @@ block content
                 a(href= '/ls-tree/' + branch + deep)= crumb + '/'
     else
         a(href= '/ls-tree/' + branch) /
-    if blob
+    if body
         pre.blob(style="border: 1px solid #a8a8a8")
             =body
