--- a/server/templates/branch-list.pug
+++ b/server/templates/branch-list.pug
@@ -9,6 +9,6 @@ block content
                 li.list__item.list__item_flex.branch-list__item(class=isDefaultBranch ? 'branch-list__item_default' : '')
                     a.branch-list__link(href='/branch/' + branch )= branch
                     div
-                        a(href='/ls-tree/' + branch).button.button_no_offset Browse Files
+                        a(href='/ls-tree/' + branch style="margin-right: 20px").button.button_no_offset Browse Files
                         a(href='/tree/' + branch + '/' + branch ).button.button_no_offset.button_primary Browse Tree
 
