--- a/server/templates/blob.pug
+++ b/server/templates/blob.pug
@@ -12,5 +12,5 @@ block content
         p.breadcrumbs
             a(href= '/ls-tree/' + branch) /
     if body
-        pre.blob(style="border: 1px solid #a8a8a8")
+        pre.blob
             =body
