special fix for @shuhrat

--- a/server/templates/layouts/default.pug
+++ b/server/templates/layouts/default.pug
@@ -10,6 +10,6 @@ html(lang="en")
                 block content
                 +error(error)
         include ../includes/footer.pug
-            a(href='/term') Go To Command Line
+            //a(href='/term') Go To Command Line
         block scripts
             include ../includes/scripts.pug
